--- a/src/app/auth/user-filter-page/components/edit-client/edit-client.component.html
+++ b/src/app/auth/user-filter-page/components/edit-client/edit-client.component.html
@@ -1,6 +1,6 @@
 <form class="add-user-form" [formGroup]="edditClientForm">
   <fieldset class="form-group__item">
-    <label class="form-group__item--label">Фмилия</label>
+    <label class="form-group__item--label">Фaмилия</label>
     <input
       type="text"
       formControlName="last_name"
