documents and payments img picker

--- a/src/app/auth/broker-auth-page/components/broker-auth-tabs/broker-auth-tabs.component.html
+++ b/src/app/auth/broker-auth-page/components/broker-auth-tabs/broker-auth-tabs.component.html
@@ -6,22 +6,14 @@
 >
   <mat-tab>
     <ng-template mat-tab-label class="tab-item">
-      <img
-        src="../../../../../assets/images/phone.svg"
-        class="tab-item__img"
-        alt="phone"
-      />
+      <img src="/assets/images/phone.svg" class="tab-item__img" alt="phone" />
       <span class="tab-item__text">Email</span>
     </ng-template>
     <tes-auth-email-form></tes-auth-email-form>
   </mat-tab>
   <mat-tab>
     <ng-template mat-tab-label class="tab-item">
-      <img
-        src="../../../../../assets/images/vin.svg"
-        class="tab-item__img"
-        alt="vin"
-      />
+      <img src="/assets/images/vin.svg" class="tab-item__img" alt="vin" />
       <span class="tab-item__text">По ID-дилера</span>
     </ng-template>
     <tes-auth-broker-id-form></tes-auth-broker-id-form>
