--- a/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-card/insurance-policy-card.component.html
+++ b/src/app/shared/components/insurance-policies-modal/components/insurance-polices-modal-card/insurance-policy-card.component.html
@@ -3,9 +3,7 @@
     <div class="card-body__header-card">
       <img
         class="card-body__header-img"
-        src="../../../../../../../assets/images/insuranses/{{
-          insuranceCompany.img
-        }}"
+        src="/assets/images/insuranses/{{ insuranceCompany.img }}"
         alt="{{ insuranceCompany.img }}"
       />
     </div>
