--- a/src/app/auth/broker-auth-page/components/auth-broker-id-form/auth-broker-id-form.component.html
+++ b/src/app/auth/broker-auth-page/components/auth-broker-id-form/auth-broker-id-form.component.html
@@ -19,7 +19,7 @@
     <div class="auth-formId-item__wrapper">
       <label for="id" class="auth-formId-item__label">ID-дилера*</label>
       <img
-        src="../../../../../assets/images/tooltip_item.svg"
+        src="/assets/images/tooltip_item.svg"
         alt="tool-tip"
         [matTooltipClass]="{ 'tool-tip': true }"
         class="example-tab-icon"
