created loan params page

--- a/src/app/auth/user-filter-page/components/clients-list/clients-list.component.html
+++ b/src/app/auth/user-filter-page/components/clients-list/clients-list.component.html
@@ -65,6 +65,7 @@
         mat-row
         *matRowDef="let row; columns: displayedColumns"
         (click)="selectedClient(row)"
+        class="clients-table-link"
       ></tr>
     </table>
 
