created loan params page

--- a/src/app/pages/calculation-loan-page/components/loan-params/componets/loan-offer/loan-offer.component.html
+++ b/src/app/pages/calculation-loan-page/components/loan-params/componets/loan-offer/loan-offer.component.html
@@ -31,12 +31,16 @@
         <span class="loan-body__img--label">Совкомбанк</span>
       </div>
       <div class="monthly-payment">
-        <span class="monthly-payment-title">Ежемесячный платеж</span>
+        <span class="monthly-payment__title">Ежемесячный платеж</span>
         <div class="monthly-payment-amount">
-            <span class="amount">35 150</span>
-            <span class="currency">₽/мес</span>
+            <span class="monthly-payment-amount__amount">35 150</span>
+            <span class="monthly-payment-amount__currency">₽/мес</span>
+        </div>
+        <span class="monthly-payment__title">Пользование атвомобилем</span>
+        <div class="car-use-cost">
+            <span class="car-use-cost__amount">4 600</span>
+            <span class="car-use-cost__currency">₽/мес</span>
         </div>
       </div>
 </div>
-
 </div>
