--- a/src/app/pages/calculation-loan-page/components/loan-params/loan-params.component.scss
+++ b/src/app/pages/calculation-loan-page/components/loan-params/loan-params.component.scss
@@ -34,6 +34,14 @@
     color: #343e48;
     margin-left: 35px;
     flex-wrap: wrap;
+
+    &__button {
+      height: 20vh;
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end;
+  }
   }
 
   .loan-params-item {
