--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -79,3 +79,23 @@ input:-webkit-autofill:active {
   -webkit-text-fill-color: #ffffff !important;
   -webkit-box-shadow: 0 0 0 30px grey inset !important;
 }
+
+td,
+th {
+  text-align: center;
+  vertical-align: middle;
+}
+
+select {
+  appearance: none !important;
+  -moz-appearance: none !important;
+  -webkit-appearance: none !important;
+  background-image: url('/assets/images/select_arrow.svg') !important;
+  background-repeat: no-repeat !important;
+  background-position: calc(100% - 10px) center !important;
+}
+
+// select:active {
+//   float: left; // to shift to left
+//   transform: rotate(180deg);
+// }
