--- a/src/app/auth/broker-auth-page/components/broker-auth-page/broker-auth-page.component.html
+++ b/src/app/auth/broker-auth-page/components/broker-auth-page/broker-auth-page.component.html
@@ -18,7 +18,7 @@
     <!-- <p class="">
           <a [routerLink]="['/login']">Have an account?</a>
         </p> -->
-    <!-- <mc-backend-error-messages *ngIf="backandErrors$ | async"
-      [backendErrors]="backandErrors$ | async"></mc-backend-error-messages> -->
+    <!-- <mc-backend-error-messages *ngIf="backendErrors$ | async"
+      [backendErrors]="backendErrors$ | async"></mc-backend-error-messages> -->
   </div>
 </div>
