--- a/src/app/auth/user-auth-page/components/register/register.component.html
+++ b/src/app/auth/user-auth-page/components/register/register.component.html
@@ -41,8 +41,8 @@
           <a [routerLink]="['/login']">Have an account?</a>
         </p> -->
 <!-- <tes-backend-error-messages
-      *ngIf="backandErrors$ | async"
-      [backendErrors]="backandErrors$ | async"
+      *ngIf="backendErrors$ | async"
+      [backendErrors]="backendErrors$ | async"
     ></tes-backend-error-messages> -->
 <!-- <div class="auth-buttons">
       <input type="button" value="Зарегистрироваться" />
