--- a/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
+++ b/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
@@ -258,7 +258,7 @@
 
         <div class="car-info-details-form__button">
           <tes-submit-form-button
-            [formValues]="formCarOptions.value"
+            [formValues]="formCarOptions"
             [isDisable]="!formCarOptions.valid"
             buttonText="Далее"
           ></tes-submit-form-button>
