--- a/src/app/pages/calculation-loan-page/components/insurances-params/insurances-params.component.html
+++ b/src/app/pages/calculation-loan-page/components/insurances-params/insurances-params.component.html
@@ -126,7 +126,7 @@
     </div>
 
     <tes-submit-form-button
-      [formValues]="formInsuranceOptions.value"
+      [formValues]="formInsuranceOptions"
       [isDisable]="!formInsuranceOptions.valid"
       buttonText="Рассчитать"
     ></tes-submit-form-button>
