--- a/src/app/pages/calculation-loan-page/components/owner/owner.component.html
+++ b/src/app/pages/calculation-loan-page/components/owner/owner.component.html
@@ -238,7 +238,7 @@
             </div>
 
             <tes-submit-form-button
-              [formValues]="formOwnerOptions.value"
+              [formValues]="formOwnerOptions"
               [isDisable]="!formOwnerOptions.valid"
               buttonText="Далее"
             ></tes-submit-form-button>
