--- a/src/app/pages/processing-page/components/work/work.component.html
+++ b/src/app/pages/processing-page/components/work/work.component.html
@@ -124,7 +124,7 @@
   </div>
 
   <tes-submit-form-button
-    [formValues]="userWorksForm.value"
+    [formValues]="userWorksForm"
     [isDisable]="!userWorksForm.valid"
     buttonText="Подать заявку в банк"
   ></tes-submit-form-button>
