fix some checkbox

--- a/src/app/auth/user-filter-page/components/edit-client/edit-client.component.html
+++ b/src/app/auth/user-filter-page/components/edit-client/edit-client.component.html
@@ -31,6 +31,17 @@
       class="form-group__item--input"
     />
   </fieldset>
+
+  <fieldset class="form-group__checkbox">
+    <label class="form-group__checkbox--label"
+      >Перейти к заполнению данных клиента</label
+    >
+    <input
+      type="checkbox"
+      formControlName="checkbox"
+      class="form-group__checkbox--input"
+    />
+  </fieldset>
   <input
     class="modal-buttons__save"
     type="button"
