changed some mistakes

--- a/src/app/auth/user-filter-page/components/add-user-modal/add-user-modal.component.html
+++ b/src/app/auth/user-filter-page/components/add-user-modal/add-user-modal.component.html
@@ -19,7 +19,7 @@
 
       <mat-tab [disabled]="indexOfTab < 1">
         <ng-template mat-tab-label class="tab-item">
-          <span class="tab-item__text">Веррификация клиента</span>
+          <span class="tab-item__text">Верификация клиента</span>
         </ng-template>
         <tes-client-verification-code
           (nextStepOutput)="nextStep($event)"
