--- a/src/app/pages/processing-page/components/client-info/client-info.component.html
+++ b/src/app/pages/processing-page/components/client-info/client-info.component.html
@@ -65,7 +65,7 @@
         <input
           type="checkbox"
           class="form-group__item checkbox"
-          formControlName="passport_chenged"
+          formControlName="passport_changed"
           name="checkbox"
         />
         <label for="checkbox" class="form-group__item--label">
