--- a/src/app/pages/processing-page/components/work/work.component.html
+++ b/src/app/pages/processing-page/components/work/work.component.html
@@ -97,7 +97,7 @@
           Примерное количество сотрудников
           <input
             type="text"
-            formControlName="number_of_employes"
+            formControlName="number_of_employees"
             class="form-group__item--input"
         /></label>
       </fieldset>
